k8s/universidad-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universidad-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: universidadservice
  template:
    metadata:
      labels:
        app: universidadservice
    spec:
      containers:
        - name: universidadservice
          image: rusok/super_sistema:3
          imagePullPolicy: IfNotPresent
