k8s/universidad-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: universidadpuertonodo-service
spec:
  type: NodePort
  selector:
    app: universidadservice
  ports:
    - name: universidadservice
      protocol: TCP
      port: 80
      targetPort: 80
